added info of every pokemon's id, sprite, types, and abilities, two new endpoints
